# dendron

./: .gitignore  README.md  pyproject.toml
src/dendron/: __init__.py  __main__.py  cli.py  gitignore.py  renderer.py  walker.py
tests/: test_placeholder.py
