[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dendron"
version = "0.1.0"
description = "A .gitignore-aware directory tree printer"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["pathspec>=0.11"]

[project.scripts]
dendron = "dendron.cli:main"

[tool.setuptools.packages.find]
where = ["src"]